Working version of the app but with index.html instead of channel.html

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <header>
         <div class="wrap">
             <!-- logo -->
-            <a href="#!"><img class="logo" src="images/logo.png" /></a>
+            <a href="#!/home"><img class="logo" src="images/logo.png" /></a>
 
             <!-- navigation menu -->
             <nav>
                 <ul>
                     <li><a id="homeBtn" href="#!/home" ng-class="{activeSmall:part == 'home'}">Home</a></li>
-                    <li><a id="workBtn" href="#!/" ng-class="{activeSmall:part == 'projects'}" >Channel</a></li>
+                    <li><a id="workBtn" href="#!/channel" ng-class="{activeSmall:part == 'channel'}" >Channel</a></li>
                     <li><a id="streamsBtn" href="#!/streams" ng-class="{activeSmall:part == 'streams'}">Streams</a></li>
                     <li><a id="aboutBtn" href="#!/about" ng-class="{activeSmall:part == 'about'}">About</a></li>
                     <li style="margin-right:0px"><a id="contactBtn" class="active" href="javascript: void(0)" ng-click="showForm()">Contact Us</a></li>
