--- a/pages/index.html
+++ b/pages/index.html
@@ -1,25 +1,25 @@
 <div style="width:100%">
     <a class="projectObj" href="#!/project/product1" style="background-color:#87b822">
         <div class="wrap">
-            <div class="name">What is Merging Streams?</div>
+            <div class="name">Innovation</div>
             <img class="img" src="images/element.png" />
         </div>
     </a>
     <a class="projectObj" href="#!/project/product2" style="background-color:#3f91d2">
         <div class="wrap">
-            <div class="name">What do we provide?</div>
+            <div class="name">Solutions</div>
             <img class="img" src="images/element.png" />
         </div>
     </a>
     <a class="projectObj" href="#!/project/product3" style="background-color:#f1784d">
         <div class="wrap">
-            <div class="name">We Start with Why</div>
+            <div class="name">HDev</div>
             <img class="img" src="images/element.png" />
         </div>
     </a>
     <a class="projectObj" href="#!/project/product4" style="background-color:#f0c42c">
         <div class="wrap">
-            <div class="name">How does Merging Streams do it?</div>
+            <div class="name">BDev</div>
             <img class="img" src="images/element.png" />
         </div>
     </a>
